# RAG

./: app.py  app_langchain.py  app_v1.py  app_v2.py  function.py  langchain_function.py  main.py  pyproject.toml
