[project]
name = "project-1-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.7.0",
    "bitsandbytes==0.46.0",
    "chromadb>=1.5.9",
    "langchain==0.3.25",
    "langchain-chroma==0.2.4",
    "langchain-community==0.3.24",
    "langchain-experimental==0.3.4",
    "langchain-huggingface==0.2.0",
    "langchain-ollama>=0.3.10",
    "langchainhub==0.1.21",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "python-dotenv==1.1.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "transformers==4.52.4",
]

[tool.uv.workspace]
members = [
    "venv",
]
